fixed panel overflow

--- a/assets/css/components/panel/panel.scss
+++ b/assets/css/components/panel/panel.scss
@@ -1,7 +1,6 @@
 .panel {
 	background-size: cover;
 	position: relative;
-	overflow: hidden;
 
 	// modifiers
 	&.blue {
